[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/lobby.gd" type="Script" id=1]
[ext_resource path="res://assets/Comfortaa-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/VBoxContainer.gd" type="Script" id=3]
[ext_resource path="res://scenes/customNode/customEdit.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/graph/icons/round-add-button.svg" type="Texture" id=5]
[ext_resource path="res://assets/style/add_player.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/graph/bottom_screen.svg" type="Texture" id=7]
[ext_resource path="res://assets/graph/icons/BG_YELLOW.png" type="Texture" id=8]
[ext_resource path="res://assets/graph/icons/Logo CEI.png" type="Texture" id=9]
[ext_resource path="res://assets/graph/icons/settings.svg" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 200
outline_size = 2
outline_color = Color( 1, 1, 1, 0 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=2]
flags = 4

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 50.0
bg_color = Color( 0.25098, 0.286275, 0.407843, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.25098, 0.286275, 0.407843, 1 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 10
expand_margin_right = 5.0
anti_aliasing_size = 2

[sub_resource type="DynamicFontData" id=4]
hinting = 0
font_path = "res://assets/Comfortaa-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 100
outline_color = Color( 1, 1, 1, 0 )
use_filter = true
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 65
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 50.0
bg_color = Color( 0.137255, 0.152941, 0.231373, 1 )
draw_center = false
border_color = Color( 0.25098, 0.286275, 0.407843, 1 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 10
expand_margin_right = 5.0
anti_aliasing_size = 2

[sub_resource type="DynamicFont" id=8]
size = 100
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="lobby" type="Control"]
margin_left = -1.0
margin_top = 1.0
margin_right = 1439.0
margin_bottom = 2960.0
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.169
margin_top = 49.9055
margin_bottom = 147.835
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Appfundum"
align = 1
valign = 1

[node name="Logo CEI" type="TextureRect" parent="."]
anchor_left = 0.849
anchor_top = 0.932
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.439941
margin_top = 1.21191
margin_right = 1936.0
margin_bottom = 1789.0
rect_scale = Vector2( 0.1, 0.1 )
texture = SubResource( 2 )
stretch_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_top = 0.202
anchor_right = 1.0
anchor_bottom = 0.203
margin_top = 76.282
margin_bottom = 1060.32
focus_next = NodePath("../TextureButton")
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.0
scroll_horizontal_enabled = false
scroll_deadzone = -11

[node name="VBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 1440.0
margin_bottom = 316.0
grow_vertical = 2
size_flags_horizontal = 3
alignment = 1

[node name="PlayerNameBox" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_left = 220.0
margin_right = 1220.0
margin_bottom = 316.0
grow_horizontal = 2
size_flags_horizontal = 5
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1
script = ExtResource( 3 )

[node name="LineEdit" parent="ScrollContainer/VBoxContainer/PlayerNameBox" instance=ExtResource( 4 )]
margin_left = 0.0
margin_right = 1000.0
margin_bottom = 133.0
grow_horizontal = 0
grow_vertical = 2
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 5 )

[node name="LineEdit2" parent="ScrollContainer/VBoxContainer/PlayerNameBox" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 183.0
margin_right = 1000.0
margin_bottom = 316.0
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 5 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 208.077
margin_top = 1675.52
margin_right = 288.077
margin_bottom = 1755.52
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 2, 2 )
action_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
stretch_mode = 3

[node name="aBox" type="HBoxContainer" parent="."]
margin_left = 100.0
margin_top = 1687.0
margin_right = 1340.0
margin_bottom = 1840.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
custom_constants/separation = -1000

[node name="TextEdit" type="Button" parent="aBox"]
margin_right = 1240.0
margin_bottom = 153.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 6 )
text = "Un joueur de plus?"

[node name="start2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.891
margin_left = 5.03503
margin_top = 1769.0
margin_right = 21.035
margin_bottom = 0.531006
focus_previous = NodePath("../ScrollContainer")
size_flags_horizontal = 3
texture = ExtResource( 7 )
expand = true

[node name="start" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 0.891
margin_left = -4.0
margin_top = 2082.0
margin_right = -2.0
margin_bottom = 0.531006
focus_previous = NodePath("../ScrollContainer")
size_flags_horizontal = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "On peut y aller! â†’  "
align = 2

[node name="BG_YELLOW" type="Sprite" parent="."]
position = Vector2( 711.011, 2932.21 )
scale = Vector2( 1.88877, 1 )
texture = ExtResource( 8 )

[node name="Logo CEI2" type="Sprite" parent="."]
position = Vector2( 1023.49, 2117.06 )
rotation = 0.337897
scale = Vector2( 0.207387, 0.207387 )
texture = ExtResource( 9 )

[node name="settings" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -196.196
margin_top = 30.5632
margin_right = 339.804
margin_bottom = 554.563
rect_scale = Vector2( 0.24, 0.24 )
icon = ExtResource( 10 )
flat = true
[connection signal="player_added" from="ScrollContainer/VBoxContainer/PlayerNameBox" to="." method="_on_player_added"]
[connection signal="pressed" from="TextureButton" to="ScrollContainer/VBoxContainer/PlayerNameBox" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="aBox/TextEdit" to="ScrollContainer/VBoxContainer/PlayerNameBox" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="start" to="ScrollContainer/VBoxContainer/PlayerNameBox" method="_on_start_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
